--- a/index.html
+++ b/index.html
@@ -511,32 +511,31 @@
         <div class="form">
           <p class="form__title">Zostaw swoje dane w formularzu poniżej</p>
           <form class="form__data">
-            <label class="form-item">
-              <span class="form-item__title">Imie</span>
-              <input class="form-item__input" type="text" name="username" />
-              <svg class="form-item__icon">
+            <label class="form__item">
+              <span class="form__item-title">Imie</span>
+              <input class="form__item-input" type="text" name="username" />
+              <svg class="form__item-icon">
                 <use href="./images/icon.svg#icon-person-black-18dp-1"></use>
               </svg>
             </label>
-            <label class="form-item"
-              ><span class="form-item__title">Telefon</span>
-              <input class="form-item__input" type="tel" name="phoneNumber" />
-              <svg class="form-item__icon">
+            <label class="form__item"
+              ><span class="form__item-title">Telefon</span>
+              <input class="form__item-input" type="tel" name="phoneNumber" />
+              <svg class="form__item-icon">
                 <use href="./images/icon.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </label>
-            <label class="form-item"
-              ><span class="form-item__title">Email</span>
-              <input class="form-item__input" type="email" name="email" />
-              <svg class="form-item__icon">
+            <label class="form__item"
+              ><span class="form__item-title">Email</span>
+              <input class="form__item-input" type="email" name="email" />
+              <svg class="form__item-icon">
                 <use href="./images/icon.svg#icon-email-black-18dp-1"></use>
               </svg>
             </label>
-            <label class="form-item"
-              ><span class="form-item__title">Komentarz</span>
+            <label class="form__item"
+              ><span class="form__item-title">Komentarz</span>
               <textarea
-                class="form-item__textarea"
-                class=""
+                class="form__item-textarea"
                 rows="7"
                 name="comment"
                 placeholder="Wprowadź tekst"
